[tool.poetry]
name = "spotify-playlist-mixer"
version = "0.1.0"
description = ""
authors = ["Alexander Weinmann <me@aweinmann.de>"]
readme = "README.md"
packages = [{include = "spotify_playlist_mixer"}]

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "2.22.0"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
